fix: overflowing content pblem fixed

--- a/css/style.css
+++ b/css/style.css
@@ -590,24 +590,12 @@ video {
   display: grid;
 }
 
-.hidden {
-  display: none;
-}
-
 .h-10 {
   height: 2.5rem;
 }
 
-.h-\[100vh\] {
-  height: 100vh;
-}
-
 .h-full {
   height: 100%;
-}
-
-.h-\[100dvh\] {
-  height: 100dvh;
 }
 
 .h-screen {
@@ -640,12 +628,21 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.grid-rows-3 {
-  grid-template-rows: repeat(3, minmax(0, 1fr));
-}
-
 .overflow-hidden {
   overflow: hidden;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-2 {
+  border-width: 2px;
+}
+
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 
 .bg-\[hsl\(0\2c 0\%\2c 0\%\2c 0\.222222\)\] {
@@ -662,24 +659,13 @@ video {
   background-color: hsl(35 65% 81% / var(--tw-bg-opacity));
 }
 
-.bg-\[\] {
-  background-color: ;
-}
-
-.bg-\[url\] {
-  background-color: url;
-}
-
-.bg-\[url\(\)\] {
-  background-image: url();
-}
-
-.bg-\[url\(\'\'\)\] {
-  background-image: url('');
-}
-
 .bg-\[url\(\'img\/city\.jpg\'\)\] {
   background-image: url('img/city.jpg');
+}
+
+.via-zinc-400 {
+  --tw-gradient-to: rgb(161 161 170 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #a1a1aa var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
 .object-cover {
@@ -704,6 +690,10 @@ video {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
 }
 
 .pl-6 {
@@ -754,11 +744,6 @@ video {
   opacity: 0;
 }
 
-.blur {
-  --tw-blur: blur(8px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 .drop-shadow-xl {
   --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -767,10 +752,6 @@ video {
 .invert-\[95\%\] {
   --tw-invert: invert(95%);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.delay-150 {
-  transition-delay: 150ms;
 }
 
 .delay-500 {
@@ -785,6 +766,10 @@ video {
   transition-duration: 500ms;
 }
 
+*{
+  box-sizing: border-box;
+}
+
 .hero-section {
   grid-template-areas: 'stack' ;
   isolation: isolate;
@@ -794,9 +779,8 @@ video {
   grid-area: stack;
 }
 
-.hero-section .hero-body {
-  position: relative;
-  z-index: 2;
+.hero-section  *{
+  /*border: red solid;*/
 }
 
 @font-face{
@@ -822,28 +806,61 @@ video {
   background-color: hsl(37 38% 34% / var(--tw-bg-opacity));
 }
 
-.group:hover .group-hover\:bg-coyoteBrown {
-  --tw-bg-opacity: 1;
-  background-color: hsl(37 38% 34% / var(--tw-bg-opacity));
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8,0,1,1);
+  }
+
+  50% {
+    transform: none;
+    animation-timing-function: cubic-bezier(0,0,0.2,1);
+  }
 }
 
-.group:hover .group-hover\:bg-transparent {
-  background-color: transparent;
+.group:hover .group-hover\:animate-bounce {
+  animation: bounce 1s infinite;
 }
 
-.group:hover .group-hover\:bg-lightBiege {
-  --tw-bg-opacity: 1;
-  background-color: hsl(35 47% 64% / var(--tw-bg-opacity));
+@keyframes ping {
+  75%, 100% {
+    transform: scale(2);
+    opacity: 0;
+  }
 }
 
-.group:hover .group-hover\:text-coyoteBrown {
-  --tw-text-opacity: 1;
-  color: hsl(37 38% 34% / var(--tw-text-opacity));
+.group:hover .group-hover\:animate-ping {
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+.group:hover .group-hover\:animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.group:hover .group-hover\:animate-spin {
+  animation: spin 1s linear infinite;
 }
 
 .group:hover .group-hover\:text-lightWheat {
   --tw-text-opacity: 1;
   color: hsl(35 65% 81% / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-white {
+  --tw-text-opacity: 1;
+  color: rgb(245 245 245 / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px) {
